@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>22</java.version>
+        <java.version>24</java.version>
         <junit.version>5.12.2</junit.version>
         <lombok.version>1.18.38</lombok.version>
     </properties>
@@ -72,7 +72,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -85,9 +84,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>@{argLine} --enable-preview</argLine> <!-- argLine variable is defined by JaCoCo-->
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
